마지막 커밋

--- a/user/templates/user/email_resend_page.html
+++ b/user/templates/user/email_resend_page.html
@@ -40,10 +40,7 @@
             <a class="nav-link" href="{% url 'index' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="예능.html">예능</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="드라마.html">드라마</a>
+            <a class="nav-link" href="contents.html">CONTENTS</a>
           </li>
           {% if request.user.is_authenticated %}
           <li class="nav-item">
