--- a/user/templates/user/contents.html
+++ b/user/templates/user/contents.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,13 +9,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>log in</title>
+  <title>CONTENTS</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{% static "user/vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="{% static "user/vendor/fontawesome-free/css/all.min.css" %}" rel="stylesheet" type="text/css">
+  <link href="{% static "user/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="{% url "index" %}">What's Next</a>
+      <a class="navbar-brand" href="{% url "mypage" %}">HOME</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -40,76 +40,72 @@
             <a class="nav-link" href="{% url "index" %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url "contents" %}">콘텐츠</a>
+            <a class="nav-link" href="{% url "contents" %}">CONTENTS</a>
           </li>
-          {% if request.user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{% url "mypage" %}">MY</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url "logout" %}">로그아웃</a>
-          </li>
-          {% else %}
-          <li class="nav-item">
             <a class="nav-link" href="{% url "login" %}">로그인</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url "signup" %}">회원가입</a>
-          </li>
-          {% endif %}
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{% static "user/img/contact-bg.jpg" %}')">
+  <header class="masthead" style="background-image: url('{% static "user/img/post-bg.jpg" %}')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>Log in</h1>
-            <span class="subheading">Have questions? I have answers.</span>
+          <div class="post-heading">
+            <h1>Man must explore, and this is exploration at its greatest</h1>
+            <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
+            <span class="meta">Posted by
+              <a href="#">Start Bootstrap</a>
+              on August 24, 2019</span>
           </div>
         </div>
       </div>
     </div>
   </header>
 
-  <!-- Main Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-        <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-        <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-        <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-        <form action="." method="post" name="sentMessage">
-          {% csrf_token %}
-          {% for field in form %}
-          <div class="form-group floating-label-form-group {% if field.errors|length > 0 %}has-error{% endif %}">
-            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-            <input name="{{ field.html_name }}" id="{{ field.id_for_lable }}" class="form-control" type="{{ field.field.widget.input_type }}" value="{{ field.value|default_if_none:'' }}" placeholder="{{ field.label }}">
-            <p class="help-block text-danger"></p>
-            {% for error in field.errors %}
-              <label class="control-label" for="{{ field.id_for_label }}">{{ error }}</label>
+  <!-- Post Content -->
+  <article>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <h2 class="section-heading">Contents</h2>
+
+          <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
+
+          <ul>
+            {% for content in object_list %}
+            <a href = "{% url "detail_content" pk=content.Item_ID %}"><li>{{ content.title }}</li></a>
             {% endfor %}
-          </div>
-          {% endfor %}
-          <div id="success"></div>
-          <div class="form-actions">
-            <button class="btn btn-primary btn-large" type="submit">log in</button>
-          </div>
-          <br>
-          <a href="/user/resend_verify_email/">
-            <div class="btn btn-primary btn-large">인증이메일 재발송</div>
-          </a>
-        </form>
-        
+            {% if is_paginated %}
+            <div class="pagination">
+              <span class="page-links">
+                {% if page_obj.has_previous %}
+                <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+                <span class="page-current">
+                  <p>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</p>
+                </span>
+                {% if page_obj.has_next %}
+                <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+                {% endif %}
+              </span>
+            </div>
+            {% endif %}
+          </ul>
+          <h2 class="section-heading">Reaching for the Stars</h2>
+          <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
+        </div>
       </div>
     </div>
-  </div>
+  </article>
 
   <hr>
 
@@ -153,10 +149,6 @@
   <!-- Bootstrap core JavaScript -->
   <script src="{% static "user/vendor/jquery/jquery.min.js" %}"></script>
   <script src="{% static "user/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
-
-  <!-- Contact Form JavaScript -->
-  <script src="{% static "user/js/jqBootstrapValidation.js" %}"></script>
-  <script src="{% static "user/js/contact_me.js" %}"></script>
 
   <!-- Custom scripts for this template -->
   <script src="{% static "user/js/clean-blog.min.js" %}"></script>
